--- a/promt_engineering_zero_shot_classification.ipynb
+++ b/promt_engineering_zero_shot_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "id": "5b10d2dc",
    "metadata": {},
    "outputs": [
@@ -10,20 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting einops\n",
-      "  Using cached einops-0.6.1-py3-none-any.whl (42 kB)\n",
-      "Installing collected packages: einops\n",
-      "Successfully installed einops-0.6.1\n"
+      "Requirement already satisfied: einops in /Users/carlossalasflores/opt/anaconda3/lib/python3.9/site-packages (0.6.1)\r\n"
      ]
     }
    ],
    "source": [
-    "!pip install einops"
+    "#!pip install einops"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "id": "0f3d6b2a",
    "metadata": {},
    "outputs": [],
@@ -40,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "86f6774b",
    "metadata": {},
    "outputs": [],
@@ -53,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "id": "8c8bfeb9",
    "metadata": {},
    "outputs": [],
@@ -64,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "id": "9a8716ef",
    "metadata": {},
    "outputs": [],
@@ -104,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 85,
    "id": "d32e5a4d",
    "metadata": {},
    "outputs": [],
@@ -158,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "7d76edd7",
    "metadata": {},
    "outputs": [],
@@ -198,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "f4e43dd7",
    "metadata": {},
    "outputs": [],
@@ -212,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "id": "66483a85",
    "metadata": {},
    "outputs": [],
@@ -223,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "id": "a810aa3c",
    "metadata": {},
    "outputs": [
@@ -250,12 +247,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 88,
+   "id": "ddc84c1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "211438848"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clip = load_clip_backbone(image_encoder=\"B/32@224\", text_encoder=\"B\", device=torch.device('cpu'))\n",
+    "np.sum([ np.prod(x.shape) for x in clip.parameters() ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "bbb710fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "127588864"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clip = load_clip_backbone(image_encoder=\"S/16@112\", text_encoder=\"B\", device=torch.device('cpu'))\n",
+    "np.sum([ np.prod(x.shape) for x in clip.parameters() ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "53d310ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6034315132099093"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "127588864 / 211438848"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "f83b650b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'CLIPModule' object has no attribute 'load_from_checkpoint'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/j8/lbnsc2qj41jgyy60v7nltymc0000gn/T/ipykernel_3714/3867141357.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_clip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"ViT-Base/32 @ 224px\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclip\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparameters\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/var/folders/j8/lbnsc2qj41jgyy60v7nltymc0000gn/T/ipykernel_3714/2774277824.py\u001b[0m in \u001b[0;36mload_clip\u001b[0;34m(clip_model)\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mclip_model\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"ViT-Base/32 @ 224px\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mclip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_clip_backbone\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_encoder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"B/32@224\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext_encoder\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"B\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'cpu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m         \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss_hist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclip\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_from_checkpoint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheckpointdir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"CLIP_epoch_4_\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mclip\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.9/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   1267\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1268\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mmodules\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1269\u001b[0;31m         raise AttributeError(\"'{}' object has no attribute '{}'\".format(\n\u001b[0m\u001b[1;32m   1270\u001b[0m             type(self).__name__, name))\n\u001b[1;32m   1271\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'CLIPModule' object has no attribute 'load_from_checkpoint'"
+     ]
+    }
+   ],
    "source": [
-    "clip = load_clip(\"ViT-Base/32 @ 224px\")"
+    "clip = load_clip(\"ViT-Base/32 @ 224px\")\n",
+    "len(clip.parameters())"
    ]
   },
   {
